<resources>
    <string name="app_name">ThereAfter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activitiesTitle">Activities</string>
    <string name="homeItemName">Cat_Name</string>
    <string name="homeItemImage">Home Item Image</string>
    <string name="sermonItemTitle">Title</string>
    <string name="sermonItemCategory">(Category)</string>
    <string name="sermonItemContent">Respecting each other is fundamental to fostering a harmonious and productive society. It involves acknowledging and valuing the differences and similarities we share, whether in opinions, beliefs, or cultural backgrounds.Respecting each other is fundamental to fostering a harmonious and productive society. It involves acknowledging and valuing the differences and similarities we share, whether in opinions, beliefs, or cultural backgrounds.Respecting each other is fundamental to fostering a harmonious and productive society. It involves acknowledging and valuing the differences and similarities we share, whether in opinions, beliefs, or cultural backgrounds.Respecting each other is fundamental to fostering a harmonious and productive society. It involves acknowledging and valuing the differences and similarities we share, whether in opinions, beliefs, or cultural backgrounds.Respecting each other is fundamental to fostering a harmonious and productive society. It involves acknowledging and valuing the differences and similarities we share, whether in opinions, beliefs, or cultural backgrounds.Respecting each other is fundamental to fostering a harmonious and productive society. It involves acknowledging and valuing the differences and similarities we share, whether in opinions, beliefs, or cultural backgrounds.Respecting each other is fundamental to fostering a harmonious and productive society. It involves acknowledging and valuing the differences and similarities we share, whether in opinions, beliefs, or cultural backgrounds.Respecting each other is fundamental to fostering a harmonious and productive society. It involves acknowledging and valuing the differences and similarities we share, whether in opinions, beliefs, or cultural backgrounds.Respecting each other is fundamental to fostering a harmonious and productive society. It involves acknowledging and valuing the differences and similarities we share, whether in opinions, beliefs, or cultural backgrounds.</string>
    <string name="sermonItemName">Name</string>
    <string name="sermonItemBadge">Badge</string>
    <string name="icon">Icon</string>
    <string name="profilePicDescription">Profile Pic</string>
    <string name="likeIcon">Like Icon</string>
    <string name="commentIcon">Comment Icon</string>
    <string name="shareIcon">Share Icon</string>
    <string name="likeText">Like</string>
    <string name="commentText">Comment</string>
    <string name="shareText">Share</string>
    <string name="activityPicture">Activity picture</string>
    <string name="briefDescription">Brief Description</string>
    <string name="followIcon">Follow Icon</string>
    <string name="appBar">App bar</string>
    <string name="navigation_drawer_open">Navigation drawer opened</string>
    <string name="navigation_drawer_close">Navigation drawer closed</string>
    <string name="changeLanguage">Change Language</string>
    <string name="activities">Activities</string>
    <string name="sermons">Sermons</string>
    <string name="topusers">Top Users</string>
    <string name="posts">Posts</string>
    <string name="profileMenu">Profile</string>
    <string name="homeMenu">Home</string>
    <string name="sermonsMenu">Sermons</string>
    <string name="postsMenu">Posts</string>
    <string name="settingsMenu">Settings</string>
    <string name="Rate">rate</string>
    <string name="language">Language</string>
    <string name="darkMode">Dark Mode</string>
    <string name="notifications">Notifications</string>
    <string name="accountSettings">Account Settings</string>
    <string name="helpAndSupport">Help and Support</string>
    <string name="getHelpAndSupport">Get help and support</string>
    <string name="feedback">Provide feedback or report bugs</string>
    <string name="legal">Legal</string>
    <string name="TAS">View the app\'s terms of service</string>
    <string name="PAP">View the app\'s privacy policy</string>
    <string name="EditAccSett">Manage your account details</string>
    <string name="owners_name">Owners Name</string>
    <string name="sermon_description" translatable="false">Sermon Description</string>
    <string name="show_more" translatable="false">Show More</string>
    <string name="show_less" translatable="false">Show Less</string>
    <string name="submit_sermon">Submit Sermon</string>
    <string name="type_here">Type Here...</string>
    <string name="media">Media</string>
    <string name="file">File</string>
    <string name="audio">Audio</string>

    <string-array name="languages">
        <item>English</item>
        <item>Arabic</item>
        <item>Spanish</item>
        <item>Urdu (Pakistan)</item>
        <item>Hindi (India)</item>
    </string-array>

    <string-array name="language_codes">
        <item>en</item>
        <item>ar</item>
        <item>es</item>
        <item>ur</item>
        <item>hi</item>
    </string-array>
</resources>