<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Account Settings Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accountSettings"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:background="@color/black"
                android:src="@drawable/baseline_person_add_alt_1_24" />

            <Button
                android:id="@+id/button_account_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/black"
                android:text="@string/EditAccSett"
                android:textColor="@color/white" />

        </LinearLayout>

        <!-- Language Selection -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/language"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner_language"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:entries="@array/language_codes" />

        <!-- Dark Mode Toggle -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/darkMode"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Switch
                android:id="@+id/switch_dark_mode"
                android:layout_width="48dp"
                android:layout_height="48dp" />
        </LinearLayout>

        <!-- Notifications Toggle -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notifications"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Switch
                android:id="@+id/switch_notifications"
                android:layout_width="48dp"
                android:layout_height="48dp" />
        </LinearLayout>

        <!-- Help and Support -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/helpAndSupport"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button_help_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/getHelpAndSupport"
            android:textColor="@color/white" />

        <!-- Feedback -->
        <Button
            android:id="@+id/button_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/black"
            android:text="@string/feedback"
            android:textColor="@color/white" />

        <!-- Legal -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/legal"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button_terms_of_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/TAS"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/black"
            android:text="@string/PAP"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>
