<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profileItem"
    android:layout_width="400dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/circular_shape"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/followIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="33.33"
            android:contentDescription="@string/followIcon"
            android:src="@drawable/baseline_person_add_alt_1_24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="33.33"
            android:background="@color/black"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profilepic"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="40"
                android:contentDescription="@string/profilePicDescription"
                android:src="@drawable/baseline_photo_size_select_actual_24" />

            <TextView
                android:id="@+id/profilename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:background="#00FFFFFF"
                android:text="@string/sermonItemName"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/profilebadge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:background="#00FFFFFF"
                android:text="@string/sermonItemBadge"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/locationIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_weight="33.33"
            android:contentDescription="@string/followIcon"
            android:src="@drawable/baseline_location_on_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/rate_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:contentDescription="Rate Icon"
            android:src="@drawable/baseline_star_outline_24"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/rate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:text="Rate%"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/sermons_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="6dp"
            android:contentDescription="@string/commentIcon"
            android:src="@drawable/baseline_spatial_audio_off_24"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/sermons_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:text="Sermons"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/posts_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="6dp"
            android:contentDescription="@string/commentIcon"
            android:src="@drawable/baseline_comment_24"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/posts_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:text="Posts"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>
